--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,4 +56,7 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation platform('com.google.firebase:firebase-bom:28.2.1')
 }
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
