--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   # google_sign_in: ^5.0.5
   google_sign_in: ^4.5.3
   flutter_rating_bar: ^4.0.0
-  
+  flutter_switch: ^0.3.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
