--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   flutter_switch: ^0.3.2
   category_picker: ^1.0.1
+  # flutter_stripe: ^1.2.0
+  # stripe_sdk: ^5.0.0
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
