--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   # pin_code_fields: ^7.3.0
   # code_fields: ^0.0.3
   pinput: ^1.2.0
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
+  intl_phone_number_input: ^0.7.0+2
+  flutter_pin_code_fields: ^1.1.0
 
 dev_dependencies:
   flutter_test:
